k8s/product/frontend/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tws-web-deploy
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tws-web
  template:
    metadata:
      labels:
        app: tws-web
    spec:
      containers:
      - name: tws-web
        image: dodo133/react-test:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: cert-volume
          mountPath: /etc/ssl/certs/tmp
      volumes:
      - name: cert-volume
        secret:
          secretName: spring-ssl-secret
