k8s/product/frontend/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tws-web-service
  namespace: prod
spec:
  type: LoadBalancer
  selector:
    app: tws-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
