k8s/product/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
  namespace: prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - tw-style.duckdns.org
    secretName: tw-style-duckdns-org-prod-tls
  rules:
  - host: tw-style.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tws-web-service
            port:
              number: 80
